# cpp_code

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  pyproject.toml  roudi_config_minimal.toml
behaviortree_test/: CMakeLists.txt
behaviortree_test/001.simple_node/: 001.simple_node.cpp  CMakeLists.txt
behaviortree_test/002.test_port/: 002.test_port.cpp  CMakeLists.txt
behaviortree_test/003.build_first_tree/: 003.build_first_tree.cpp
behaviortree_test/004.basic_port/: 004.basic_port.cpp
behaviortree_test/005.generic_ports/: 005.generic_ports.cpp
behaviortree_test/006.reactive_sequence/: 006.reactive_sequence.cpp
behaviortree_test/007.crossdoor/: 007.crossdoor.cpp  CMakeLists.txt
behaviortree_test/008.subtree_port_remapping/: 008.subtree_port_remapping.cpp
behaviortree_test/009.load_multiple_xml/: 009.load_multiple_xml.cpp  CMakeLists.txt
behaviortree_test/010.additional_node_args/: 010.additional_node_args.cpp
behaviortree_test/011.scripting/: 011.scripting.cpp
behaviortree_test/012.observer/: 012.observer.cpp
behaviortree_test/013.groot_howto/: 013.groot_howto.cpp
behaviortree_test/014.default_ports/: 014.default_ports.cpp  CMakeLists.txt
behaviortree_test/015.access_by_ref/: 015.access_by_ref.cpp
behaviortree_test/016.subtree_model/: 016.subtree_model.cpp
behaviortree_test/017.nodes_mocking/: 017.nodes_mocking.cpp
behaviortree_test/018.global_blackboard/: 018.global_blackboard.cpp
behaviortree_test/019.blackboard_backup/: 019.blackboard_backup.cpp
behaviortree_test/020.waypoints/: 020.waypoints.cpp
behaviortree_test/022.pause_and_resume/: 021.test_halt.cpp
behaviortree_test/023.task_thread_test/: 023.task_thread_test.cpp
behaviortree_test/024.test_task/: 024.test_task.cpp  CMakeLists.txt
behaviortree_test/025.test_user_data/: 025.test_user_data.cpp  CMakeLists.txt
behaviortree_test/026.ota_state/: 026.ota_state.cpp  CMakeLists.txt
behaviortree_test/027.emit_state_changed/: 027.emit_state_changed.cpp
behaviortree_test/sample_nodes/: CMakeLists.txt  crossdoor_nodes.cpp  dummy_nodes.cpp  dummy_nodes.h  movebase_node.cpp
behaviortree_test/task/: CMakeLists.txt  task.hpp  thread_pool.hpp
boost_test/: CMakeLists.txt
boost_test/asio/: CMakeLists.txt
boost_test/asio/001.time.sync/: 001.time.sync.cpp
boost_test/asio/002.time.async/: 002.time.sync.cpp  CMakeLists.txt
boost_test/asio/003.time.bind_param/: 003.time.bind_param.cpp
boost_test/asio/004.time.bind_member_function/: 004.time.bind_member_function.cpp
boost_test/asio/005.multithread/: 005.multithread.cpp  CMakeLists.txt
boost_test/asio/006.test_scrand/: 006.test_scrand.cpp
boost_test/asio/007.tcp_clinet/: 007.tcp_clinet.cpp
boost_test/asio/008.tcp_async_server/: 008.tcp_async_server.cpp
boost_test/asio/009.tcp_async_client/: 009.tcp_async_client.cpp  CMakeLists.txt
boost_test/asio/010.udp_client/: 010.udp_client.cpp
boost_test/asio/011.udp_server/: 011.udp_server.cpp
boost_test/asio/012.channel_test/: 012.channel_test.cpp
boost_test/asio/013.mutual_exclusion_1/: 013.mutual_exclusion_1.cpp
boost_test/asio/014.throttling_proxy/: 014.throttling_proxy.cpp
boost_test/log/001.test/: 001.test.cpp  CMakeLists.txt
cmake/: GenerateVersionInfo.cmake  GetAsio.cmake  (+12 more)
cpp_test/iceoryx/: CMakeLists.txt
cpp_test/iceoryx/001.cmake/: 001.cmake.cpp
cpp_test/iceoryx/002.chunk_head/: 002.chunk_head.cpp  CMakeLists.txt
cpp_test/iceoryx/003.relative_pointer/: 003.common.hpp  003.receiver.cpp  003.roudi.cpp  003.sender.cpp  CMakeLists.txt
cpp_test/iceoryx/004.pthread_platform/: 004.pthread_platform.cpp  CMakeLists.txt
cpp_test/iceoryx/005.error_reporting/: 005.error_reporting.cpp
cpp_test/iceoryx/006.user_trigger/: 006.user_trigger.cpp  CMakeLists.txt
cpp_test/iceoryx/007.inproc_waitset/: 007.inproc_waitset.cpp  CMakeLists.txt
cpp_test/iceoryx/008.cli/: 008.cli.cpp  CMakeLists.txt
cpp_test/iceoryx/009.concurrent/: 009.concurrent.cpp  CMakeLists.txt
cpp_test/iceoryx/010.spin_semaphore/: 010.spin_semaphore.cpp
cpp_test/iceoryx/011.static_guard/: 011.static_guard.cpp
cpp_test/iceoryx/012.expected_nullopt/: 012.expected_nullopt.cpp
cpp_test/iceoryx/013.semaphore/: 013.semaphore.cpp
cpp_test/iceoryx/014.new_type/: 014.new_type.cpp  CMakeLists.txt
cpp_test/iceoryx/015.bump_allocator/: 015.bump_allocator.cpp
cpp_test/iceoryx/016.unix_domain_socket/: 016.unix_domain_socket.cpp
cpp_test/stand_cpp/: CMakeLists.txt  ReadMe.md
cpp_test/stand_cpp/001.auto_nullptr_range_based/: 001.auto_nullptr_range_based.cpp  CMakeLists.txt
cpp_test/stand_cpp/002.decltype_init_type_traits copy/: 002.decltype_init_type_traits.cpp
cpp_test/stand_cpp/003.any_test/: 003.any_test.cpp
cpp_test/stand_cpp/004.test_main/: 004.test_main.cpp
cpp_test/stand_cpp/005.test_experiment/: 005.test_experiment.cpp  test.sh
cpp_test/stand_cpp/006.no_destructor/: 006.no_destructor.cpp
cpp_test/stand_cpp/007.test_atomic_file/: 007.test_atomic_file.cpp  CMakeLists.txt
cpp_test/stand_cpp/008.test_gsl/: 008.test_gsl.cpp  CMakeLists.txt
cpp_test/stand_cpp/009.test_frozen/: 009.test_frozen.cpp  CMakeLists.txt
cpp_test/stand_cpp/010.generate_git_info/: 010.generate_git_info.cpp  CMakeLists.txt
cpp_test/stand_cpp/011.stop_token/: 011.stop_token.cpp  CMakeLists.txt
cpp_test/stand_cpp/012.ptr_proxy/: 012.ptr_proxy.cpp  CMakeLists.txt
cpp_test/stand_cpp/013.allocate/: 013.allocate.cpp  CMakeLists.txt
cpp_test/stand_cpp/014.template_policy/: 014.template_policy.cpp  CMakeLists.txt
cpp_test/stand_cpp/015.debug_assert/: 015.debug_assert.cpp
cpp_test/stand_cpp/016.if_constexpr/: 016.if_constexpr.cpp  CMakeLists.txt
cpp_test/stand_cpp/017.gmock/: 017.gmock.cpp  CMakeLists.txt
cpp_test/stand_cpp/018.check_state/: 018.check_state.cpp
utils/filesystem_wrapper/: CMakeLists.txt  atomic_file_writer.cpp  atomic_file_writer.hpp  filesystem_wrapper.cpp  filesystem_wrapper.hpp
utils/logging/: CMakeLists.txt  log_def.hpp  logging.cpp  logging.hpp
utils/thread_pool/: CMakeLists.txt  thread_pool.hpp  thread_pool_test.cpp
(+30 files in other folders)
